# blackboard

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  SPEC.md
.github/workflows/: ci.yml
migrations/: 001_initial.sql
src/: lib.rs  main.rs
src/cli/: mod.rs  output.rs
src/cli/commands/: artifact.rs  clear.rs  destroy.rs  export.rs  init.rs  install.rs  message.rs  mod.rs  ref_.rs  status.rs  summary.rs
src/core/: errors.rs  mod.rs
src/core/models/: agent.rs  artifact.rs  message.rs  mod.rs  reference.rs
src/core/operations/: agent.rs  artifact.rs  message.rs  mod.rs  reference.rs
src/core/validation/: duration.rs  limits.rs  mod.rs  ref_.rs
src/db/: connection.rs  migrations.rs  mod.rs  schema.rs
src/db/queries/: agent.rs  artifact.rs  message.rs  mod.rs
src/mcp/: identity.rs  mod.rs  server.rs  tools.rs
src/util/: discovery.rs  duration.rs  mod.rs  ref_.rs
tests/: cli_integration.rs
