[package]
name = "bb"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
rmcp = { version = "0.4", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "process", "io-std", "io-util"] }
directories = "6"
dirs = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
insta = "1"
quickcheck = "1"

[profile.release]
opt-level = 3
lto = true
